--- a/src/page.css
+++ b/src/page.css
@@ -2,7 +2,7 @@
  * Page
  */
  .page {
-    background-color: var(--black);
+    background-color: #fff;
     color: var(--gray);
     font-size: 1.4rem;
     -moz-osx-font-smoothing: grayscale;
@@ -27,7 +27,7 @@
     background-color: #fff;
     display: block;
     font-size: 1.4rem;
-    min-height: 36em;
+    /* min-height: 36em; */
     padding: 0 1.2rem;
 }
 
